// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should render a basic checkbox group 1`] = `
<fieldset
  class="form-group"
>
  <legend>
    Test checkbox group
  </legend>
  <div>
    <span>
      FocusCatcher
    </span>
    <ul
      class="checkbox-container"
    >
      <li>
        <div
          class="checkbox-wrapper"
        >
          <input
            id="foo"
            name="one"
          />
          <label
            for="foo"
          >
            One
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-wrapper"
        >
          <input
            id="foo-two"
            name="two"
          />
          <label
            for="foo-two"
          >
            Two
          </label>
        </div>
      </li>
    </ul>
  </div>
</fieldset>
`;

exports[`CheckboxGroup should render a content hint if given 1`] = `
<fieldset
  class="form-group"
>
  <legend>
    Test checkbox group
    <span
      class="visually-hidden"
    >
       
      Content hint test
    </span>
  </legend>
  <div>
    <span>
      FocusCatcher
    </span>
    <ul
      class="checkbox-container"
    >
      <li>
        <div
          class="checkbox-wrapper"
        >
          <input
            id="foo"
            name="one"
          />
          <label
            for="foo"
          >
            One
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-wrapper"
        >
          <input
            id="foo-two"
            name="two"
          />
          <label
            for="foo-two"
          >
            Two
          </label>
        </div>
      </li>
    </ul>
  </div>
  <div
    aria-hidden="true"
    class="info-wrapper"
  >
    <span
      class="icon"
    />
    <span>
      Content hint test
    </span>
  </div>
</fieldset>
`;

exports[`CheckboxGroup should render an error text when invalid 1`] = `
<fieldset
  class="form-group"
>
  <legend>
    Test checkbox group
    <span
      class="visually-hidden"
    >
       
      Test error
    </span>
  </legend>
  <div>
    <span>
      FocusCatcher
    </span>
    <ul
      class="checkbox-container"
    >
      <li>
        <div
          class="checkbox-wrapper"
        >
          <input
            id="foo"
            name="one"
          />
          <label
            for="foo"
          >
            One
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-wrapper"
        >
          <input
            id="foo-two"
            name="two"
          />
          <label
            for="foo-two"
          >
            Two
          </label>
        </div>
      </li>
    </ul>
  </div>
  <div
    aria-hidden="true"
    class="error-wrapper"
  >
    <span
      class="icon"
    />
    <span>
      Test error
    </span>
  </div>
</fieldset>
`;
